[package]
name = "widget"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36.0"
schemars = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
urlencoding = "2.1.2"
chrono = { version = "0.4.24", default-features = false, features = ["alloc"] }
time-humanize = "0.1.3"
time = { version = "0.3.37", default-features = false, features = [
    "serde-well-known",
] }
